--- a/mongooes/package.json
+++ b/mongooes/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.15.2"
-    
+    "mongoose": "^8.15.2",
+    "zod": "^3.25.67"
   },
   "scripts": {
-    "dev":"ts-node-dev --respawn --transpile-only src/app/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app/server.ts"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
